k8s-development.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: teafiles
  name: teafiles-service-ingress
spec:
  rules:
    - host: localhost
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teafiles-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: teafiles
  name: teafiles-service
spec:
  type: LoadBalancer
  selector:
    app: teafiles-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teafiles
  name: teafiles-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teafiles-service
  template:
    metadata:
      labels:
        app: teafiles-service
    spec:
      containers:
        - name: teafiles-service
          image: teafiles/teafiles-service:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3005
          volumeMounts:
            - name: app-volume
              mountPath: /app-volume
      volumes:
        - name: app-volume
          persistentVolumeClaim:
            claimName: teafiles-service-pvc
        - name: rsync-config-volume
          secret:
            secretName: rsync-config
