kuber.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teafiles
  name: teafiles-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teafiles-service
  template:
    metadata:
      labels:
        app: teafiles-service
    spec:
      containers:
        - name: teafiles-service
          image: nami/teafiles-service:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3005
          volumeMounts:
            - name: app-volume
              mountPath: /app-volume
      volumes:
        - name: app-volume
          persistentVolumeClaim:
            claimName: teafiles-service-pvc
        - name: rsync-config-volume
          secret:
            secretName: rsync-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: teafiles
  name: teafiles-service
spec:
  type: LoadBalancer
  selector:
    app: teafiles-service
  ports:
    - name: http
      protocol: TCP
      port: 3005
      targetPort: 3005
---
# apiVersion: keda.sh/v1alpha1
# kind: ScaledObject
# metadata:
#   namespace: teafiles
#   name: memory-scaledobject
# spec:
#   scaleTargetRef:
#     name: teafiles-service-deployment
#   triggers:
#     - type: memory
#       metricType: Utilization # Allowed types are 'Utilization' or 'AverageValue'
#       metadata:
#         value: "100"
#         containerName: "teafiles-service"
#     - type: cpu
#       metricType: Utilization # Allowed types are 'Utilization' or 'AverageValue'
#       metadata:
#         type: Utilization # Deprecated in favor of trigger.metricType; allowed types are 'Utilization' or 'AverageValue'
#         value: "250"
#         containerName: "teafiles-service" # Optional. You can use this to target a specific container in a pod
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: teafiles
  name: teafiles-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teafiles-service
                port:
                  number: 3005
